# cudnn-cross-correlation

./: CMakeLists.txt  Convolution.hpp  Doxyfile  Makefile  README.md  conv.cu  cuda.hpp  cudnn.hpp  main.cpp  measure-speed.cpp
Convolution/: CMakeLists.txt  Convolution.hpp
CrossCorrelation/: CMakeLists.txt  CrossCorrelation.hpp
Example/: CMakeLists.txt  Example.cpp
MeasureSpeed/: CMakeLists.txt  MeasureSpeed.cpp  Rand.hpp  Stopwatch.hpp  Time.hpp
cuDNN/: CMakeLists.txt  cuDNN.hpp
cuda/: cuda.hpp
cudart/: CMakeLists.txt  cudart.hpp
cudnn/: CMakeLists.txt  Convolution.hpp  cudnn.hpp
